do not need update device token when network resume. Fix performance issue.